--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,10 @@
-sonar.projectKey=famtree
-sonar.projectName=Famtree
-sonar.sources=server,client
+sonar.projectKey=v1-fe-be
+sonar.projectName=v1-fe-be
+sonar.projectVersion=1.0
+
+sonar.sources=client/src,server
 sonar.language=js
 sonar.sourceEncoding=UTF-8
-sonar.exclusions=**/node_modules/**,**/build/**,**/dist/**
-EOF
+
+sonar.host.url=http://localhost:9000
+
