--- a/server/package.json
+++ b/server/package.json
@@ -21,5 +21,15 @@
   "devDependencies": {
     "nodemon": "^3.1.0"
   }
+
+
+  {
+  "dependencies": {
+    "multer": "^2.0.2",
+    "glob": "^10.5.0",
+    "cross-spawn": "^7.0.5"
+  }
+}
+
 }
 
